[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Material freeway/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Material freeway/galinha/0/down/3.png" type="Texture" id=3]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=4]
[ext_resource path="res://Material freeway/galinha/0/down/1.png" type="Texture" id=5]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=6]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=7]
[ext_resource path="res://Material freeway/galinha/0/down/2.png" type="Texture" id=8]
[ext_resource path="res://Material freeway/galinha/2/down/1.png" type="Texture" id=9]
[ext_resource path="res://Material freeway/galinha/1/down/2.png" type="Texture" id=10]
[ext_resource path="res://Material freeway/galinha/2/down/2.png" type="Texture" id=11]
[ext_resource path="res://Material freeway/galinha/1/down/1.png" type="Texture" id=12]
[ext_resource path="res://Material freeway/galinha/1/down/3.png" type="Texture" id=13]
[ext_resource path="res://Material freeway/galinha/2/down/3.png" type="Texture" id=14]
[ext_resource path="res://Material freeway/galinha/3/down/1.png" type="Texture" id=15]
[ext_resource path="res://Material freeway/galinha/3/down/2.png" type="Texture" id=16]
[ext_resource path="res://Material freeway/galinha/7/down/3.png" type="Texture" id=17]
[ext_resource path="res://Material freeway/galinha/7/down/2.png" type="Texture" id=18]
[ext_resource path="res://Material freeway/galinha/6/down/3.png" type="Texture" id=19]
[ext_resource path="res://Material freeway/galinha/5/down/3.png" type="Texture" id=20]
[ext_resource path="res://Material freeway/galinha/5/down/1.png" type="Texture" id=21]
[ext_resource path="res://Material freeway/galinha/5/down/2.png" type="Texture" id=22]
[ext_resource path="res://Material freeway/galinha/6/down/2.png" type="Texture" id=23]
[ext_resource path="res://Material freeway/galinha/7/down/1.png" type="Texture" id=24]
[ext_resource path="res://Material freeway/galinha/6/down/1.png" type="Texture" id=25]
[ext_resource path="res://Material freeway/galinha/3/down/3.png" type="Texture" id=26]
[ext_resource path="res://Material freeway/galinha/4/down/3.png" type="Texture" id=27]
[ext_resource path="res://Material freeway/galinha/4/down/1.png" type="Texture" id=28]
[ext_resource path="res://Material freeway/galinha/4/down/2.png" type="Texture" id=29]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_top = 8
extra_spacing_bottom = 8
extra_spacing_char = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 9 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 26 ), ExtResource( 15 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "5",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 19 ), ExtResource( 25 ) ],
"loop": true,
"name": "6",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 24 ) ],
"loop": true,
"name": "7",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Pista" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -220.5
margin_top = -119.0
margin_right = 220.5
margin_bottom = -32.0
custom_fonts/font = SubResource( 1 )
text = "Play"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.796875, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Freeway"
align = 1
valign = 1

[node name="SubTitle" type="Label" parent="Title"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_top = 102.0
margin_right = 640.0
margin_bottom = 118.0
custom_colors/font_color = Color( 0.396078, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 4 )
text = "Gabriel Matos"
align = 1
valign = 1

[node name="AudioTema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
autoplay = true

[node name="AudioPlay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 642, 364 )
scale = Vector2( 3, 3 )
frames = SubResource( 5 )
animation = "0"

[node name="LabelProx" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 122.0
margin_top = -150.0
margin_right = 221.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 7 )
text = ">"
align = 1
valign = 1

[node name="Prox" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 640.0
margin_top = 210.0
margin_right = 861.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 6 )
text = ">"
flat = true
icon_align = 1

[node name="LabelAnte" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -150.0
margin_right = -118.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 7 )
text = "<"
align = 1
valign = 1

[node name="Ante" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 420.0
margin_top = 210.0
margin_right = 640.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 6 )
text = "<"
flat = true
icon_align = 1

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="finished" from="AudioPlay" to="." method="_on_AudioPlay_finished"]
[connection signal="pressed" from="Prox" to="." method="_on_Prox_pressed"]
[connection signal="pressed" from="Ante" to="." method="_on_Ante_pressed"]
